tests/snapshots/regression/precedence__arithmetic_precedence.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/precedence/arithmetic_precedence.flx
exit_code: 1

[1 of 7] Compiling  Assert
[2 of 7] Compiling  IO
[3 of 7] Compiling  List
[4 of 7] Compiling  Numeric
[5 of 7] Compiling  Option
[6 of 7] Compiling  String
• 9 errors • tests/fixtures/precedence/arithmetic_precedence.flx
error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  tests/fixtures/precedence/arithmetic_precedence.flx:1:1
  |
1 | print(1 + 2 * 3);
  | ^^^^^^^^^^^^^^^^^
  | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  tests/fixtures/precedence/arithmetic_precedence.flx:1:1
  |
1 | print(1 + 2 * 3);
  | ^^^^^^^^^^^^^^^^^
  | ----------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  tests/fixtures/precedence/arithmetic_precedence.flx:1:1
  |
1 | print(1 + 2 * 3);
  | ^^^^^^^^^^^^^^^^
  | ---------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  tests/fixtures/precedence/arithmetic_precedence.flx:2:1
  |
2 | print(1 * 2 + 3);
  | ^^^^^^^^^^^^^^^^^
  | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  tests/fixtures/precedence/arithmetic_precedence.flx:2:1
  |
2 | print(1 * 2 + 3);
  | ^^^^^^^^^^^^^^^^
  | ---------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  tests/fixtures/precedence/arithmetic_precedence.flx:3:1
  |
3 | print(1 + 2 + 3);
  | ^^^^^^^^^^^^^^^^^
  | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  tests/fixtures/precedence/arithmetic_precedence.flx:3:1
  |
3 | print(1 + 2 + 3);
  | ^^^^^^^^^^^^^^^^
  | ---------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  tests/fixtures/precedence/arithmetic_precedence.flx:4:1
  |
4 | print(1 - 2 - 3);
  | ^^^^^^^^^^^^^^^^^
  | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  tests/fixtures/precedence/arithmetic_precedence.flx:4:1
  |
4 | print(1 - 2 - 3);
  | ^^^^^^^^^^^^^^^^
  | ---------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`

Found 9 errors.
